--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,7 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
-    implementation 'com.google.code.gson:gson:2.8.6'
+    
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
 
@@ -51,5 +50,7 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
 
 }
