widget added, workManager, intetService added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver android:name=".widget.ExplorerWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
 
-        <!--This meta-data tag is required to use Admob.-->
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/explorer_widget_info" />
+        </receiver>
+
+        <service android:name=".widget.WidgetUpdateService"/>
+
+
+        <!-- This meta-data tag is required to use AdMob. -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-6466174421864787~8665515084"/>
+            android:value="ca-app-pub-6466174421864787~8665515084" />
 
-
-        <activity android:name=".ui.SearchActivity"
+        <activity
+            android:name=".ui.SearchActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,8 +39,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
     </application>
 
 </manifest>
