--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <activity
             android:name=".ui.SearchActivity"
             android:windowSoftInputMode="adjustPan"
-
+            android:launchMode="singleTop"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,6 +43,6 @@
         </activity>
     </application>
 
-<!--    android:launchMode="singleTop"-->
+
 
 </manifest>
